car_rental/grpc-web-client/envoy.yaml
admin:
  access_log_path: null
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901

static_resources:
  listeners:
  - name: listener_http
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              cors:
                allow_origin_string_match:
                  - safe_regex:
                      google_re2: {}
                      regex: ".*"
                allow_methods: "GET, POST, OPTIONS"
                allow_headers: "content-type,x-grpc-web,x-user-agent"
                max_age: "1728000"
                expose_headers: "grpc-status,grpc-message"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: ballerina_grpc
                  timeout: 0s
          http_filters:
          - name: envoy.filters.http.grpc_web
          - name: envoy.filters.http.cors
          - name: envoy.filters.http.router
  clusters:
  - name: ballerina_grpc
    type: LOGICAL_DNS
    connect_timeout: 0.5s
    http2_protocol_options: {}
    load_assignment:
      cluster_name: ballerina_grpc
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 9000
